crates/test-files/fixtures/compile_errors/circular_type_alias.fe
type A = Map<address, B>

type B = Map<address, C>

type C = Map<address, A>
